--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "StaleOutstandingWireframes",
-  "version": "1.0.0",
-  "main": "bot.js",
-  "scripts": {
-    "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "werelupe-bot",
+  "description": "A Fantastical Bot",
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "node": "^16.13.0"
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "node test.js"
   },
   "dependencies": {
-    "@discordjs/rest": "0.1.0-canary.0",
+    "@discordjs/builders": "^0.9.0",
+    "@discordjs/rest": "^0.1.0-canary.0",
     "@replit/database": "^2.0.1",
-    "discord-api-types": "^0.24.0",
-    "discord.js": "^13.2.0",
+    "discord-api-types": "^0.25.2",
+    "discord.js": "^13.3.1",
+    "dotenv": "^10.0.0",
+    "ejs": "^3.1.5",
+    "express": "^4.15.2",
     "mongodb": "^4.2.1",
     "mongoose": "^6.0.14",
     "node-fetch": "^3.1.0"
   },
-  "description": ""
+  "devDependencies": {
+    "got": "^11.3.0",
+    "tape": "^4.7.0"
+  },
+  "keywords": [],
+  "license": "MIT"
 }
