--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
     "node": "16.x",
     "npm": "8.x"
   },
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+    "start": "node bot.js"
   },
   "dependencies": {
     "@discordjs/builders": "^0.9.0",
